<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>com.leonarduk</groupId>
    <artifactId>pension-risk-management-system</artifactId>
    <packaging>pom</packaging>
    <version>0.1.4</version>
    <name>Parent pom</name>
    <url>http://maven.apache.org</url>


    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <exec-maven-plugin.version>1.6.0</exec-maven-plugin.version>
        <jacoco.version>0.8.13</jacoco.version>
        <jahoo.finance.version>3.17.0</jahoo.finance.version>
        <java.version>21</java.version>
        <junit.version>4.13.2</junit.version>
        <junit5.version>5.13.0-M3</junit5.version>
        <log4jdbc.log4j2.version>1.16</log4jdbc.log4j2.version>
        <maven.compiler.plugin.version>3.12.1</maven.compiler.plugin.version>
        <maven.compiler.release>21</maven.compiler.release>
        <maven.shade.plugin.version>3.2.1</maven.shade.plugin.version>
        <org.slf4j.version>2.0.17</org.slf4j.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <rest.assured.version>5.5.0</rest.assured.version>
        <org.ta4j.version>0.18</org.ta4j.version>
        <org.apache.commons.version>3.18.0</org.apache.commons.version>
        <javax.xml.bind.version>2.4.0-b180830.0359</javax.xml.bind.version>
    </properties>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven.compiler.plugin.version}</version>
                    <configuration>
                        <release>${maven.compiler.release}</release>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>com.google.auto.service</groupId>
                                <artifactId>auto-service</artifactId>
                                <version>1.0</version>
                            </path>

                            <!-- This is needed when using Lombok 1.18.16 and above -->
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok-mapstruct-binding</artifactId>
                                <version>0.2.0</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>2.2.1</version>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>2.9.1</version>
                    <executions>
                        <execution>
                            <id>attach-javadocs</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>${jacoco.version}</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>prepare-agent</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>report</id>
                            <phase>test</phase>
                            <goals>
                                <goal>report</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <rules>
                            <rule>
                                <element>BUNDLE</element>
                                <limits>
                                    <limit>
                                        <counter>INSTRUCTION</counter>
                                        <value>COVEREDRATIO</value>
                                        <minimum>0.80</minimum>
                                    </limit>
                                </limits>
                            </rule>
                        </rules>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
                <version>2.43.0</version>
                <configuration>
                    <java>
                        <googleJavaFormat/>
                    </java>
                </configuration>
                <executions>
                    <execution>
                        <phase>verify</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <dependencies>
        <!-- Removed unnecessary dependencies: junit, lombok, spring-boot-autoconfigure, jersey-server,
             jcommon, jfreechart and jakarta.ws.rs-api -->
    </dependencies>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${org.slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-simple</artifactId>
                <version>${org.slf4j.version}</version>
            </dependency>

        </dependencies>
    </dependencyManagement>
    <profiles>
        <profile>
            <id>release</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>1.1</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
    <modules>
        <module>alphavantage4j</module>
        <module>timeseries-sources</module>
        <module>timeseries-stockfeed</module>
        <module>timeseries-spring-boot-server</module>
        <module>timeseries-lambda</module>
<!--        <module>timeseries-python</module>-->
    </modules>
    <organization>
        <name>Leonard UK Ltd</name>
        <url>http://leonarduk.com</url>
    </organization>
    <inceptionYear>2017</inceptionYear>
    <licenses>
        <license>
            <name>GNU General Public License v3.0 or later</name>
            <url>http://www.spdx.org/licenses/GPL-3.0+</url>
        </license>
    </licenses>
    <developers>
        <developer>
            <id>leonarduk</id>
            <name>Stephen Leonard</name>
            <email>github@leonarduk.com</email>
            <roles>
                <role>Project Manager</role>
                <role>Architect</role>
                <role>Developer</role>
            </roles>
            <organization>Leonard UK Ltd</organization>
            <organizationUrl>http://leonarduk.com</organizationUrl>
            <timezone>0</timezone>
            <url>http://uk.linkedin.com/in/steveleonard/</url>
        </developer>
    </developers>
    <!-- to get to sona type and onto maven central -->

    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>

    <scm>
        <connection>scm:git:git@github.com:leonarduk/pension-risk-management-system.git
        </connection>
        <developerConnection>scm:git:git@github.com:leonarduk/pension-risk-management-system.git
        </developerConnection>
        <url>git@github.com:leonarduk/pension-risk-management-system.git</url>
    </scm>
</project>
